syntax = "proto3";

package forum;

service ForumService {
    rpc SendMessage(MessageRequest) returns (MessageResponse);
    rpc GetMessages(GetMessagesRequest) returns (GetMessagesResponse);
}

message MessageRequest {
    string user_id = 1;
    string content = 2;
}

message MessageResponse {
    string id = 1;
    string user_id = 2;
    string content = 3;
    string created_at = 4;
}

message GetMessagesRequest {
    int32 limit = 1;
    int32 offset = 2;
}

message GetMessagesResponse {
    repeated MessageResponse messages = 1;
}